@@ -18,6 +18,9 @@ Version 1.3.8+svn:
   * Language and translations
     * Updated translations: Czech, German.
 
+  * Map editor
+    * A right click in floodfill mode now performs a flood fill.
+
   * Unit changes and balancing
     * Created undead variations for the 'bat' and 'gryphon' race.
 
