@@ -10,6 +10,8 @@ Version 1.3.8+svn:
     * A bit of dialogue polishing in 'The Coward'
  * language and i18n:
    * updated translations: Czech, German
+ * map editor:
+   * a right click in floodfill mode now performs a flood fill.
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
